enabled FrameworkHoldersCredentialTest.java again
Signed-off-by: Dominik Pinsel <dominik.pinsel@mercedes-benz.com>